Fix alignment of images

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -264,3 +264,8 @@ p {
 .font-weight-light {
   font-weight: 100 !important;
 }
+
+.team-member img{
+    margin: auto;
+    display: block;
+}
